# orm-ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: we_r2_arm.urdf.xacro
config/bin_stl/: Forearm__1_m-binary_test.stl  gripper.stl  new_wrist_link_1.stl  new_wrist_link_2.stl  shoulder_actuator_1.stl  wrist_link_1.stl  wrist_link_2.stl
config/col_stl/: collision_base_link_test.stl  collision_forearm_test.stl  collision_gripper.stl  collision_shoulder_test.stl
scripts/: detector.py  moveit_controller.py
src/we_r2_arm_bringup/: CMakeLists.txt  package.xml
src/we_r2_arm_controller/: CMakeLists.txt  package.xml
src/we_r2_arm_description/: CMakeLists.txt  package.xml
src/we_r2_arm_description/launch/: display.launch.py  gazebo.launch.py
src/we_r2_arm_description/meshes/: 1.stl  2_1.stl  4.stl  6.stl  6_1.stl  8.stl  _basement.stl  _shoulder_link_2.stl  _wrist_link_2.stl  base_link_9_11_1.stl  new_gripper.stl  wrist_link_1.stl  wrist_link_2.stl
src/we_r2_arm_description/meshes/3dprint/: 14_1_9.stl  14_4_6.stl  14_5_2.stl  14_6_2.stl  15_1_9.stl  15_2_9.stl
src/we_r2_arm_description/rviz/: display.rviz
src/we_r2_arm_description/scripts/: stl_mass_inertia.py
src/we_r2_arm_description/urdf/: we_r2_arm.urdf.xacro  we_r2_arm_gazebo.xacro  we_r2_arm_ros2_control.xacro
src/we_r2_arm_interfaces/: CMakeLists.txt  package.xml
src/we_r2_arm_moveit/: CMakeLists.txt  package.xml
src/we_r2_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  we_r2_arm.srdf
src/we_r2_arm_moveit/launch/: moveit.launch.py  moveit_interface.launch.py
src/we_r2_arm_moveit/rviz/: moveit.rviz
src/we_r2_arm_moveit/scripts/: arm_controller.py  controller.py  gripper_controller.py  move_joint_group_server.py  moveit_interface.py  robot_planner.py  utils.py
(+23 files in other folders)
